KubeAzureCluster/Configuration/kubeapp_a_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapp-a-deployment
spec:
  selector:
    matchLabels:
      app: kubeapp-a
  template:
    metadata:
      labels:
        app: kubeapp-a
    spec:
      containers:
      - name: kubeapp-a
        image: docker.io/tmarkoc/miniserver
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kubeapp-a-service
spec:
  #externalTrafficPolicy: Local
  ports:
  - nodePort: 30100
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kubeapp-a
  type: NodePort
