KubeAzureCluster/Configuration/kubeapp_b_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapp-b-deployment
spec:
  selector:
    matchLabels:
      app: kubeapp-b
  template:
    metadata:
      labels:
        app: kubeapp-b
    spec:
      containers:
      - name: kubeapp-b
        image: docker.io/tmarkoc/miniserver
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kubeapp-b-service
spec:
  #externalTrafficPolicy: Local
  ports:
  - nodePort: 30110
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kubeapp-b
  type: NodePort
